k8s/istio/virtualservices.yaml
# virtualservices.yaml

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app
spec:
  hosts:
    - "*"
  gateways:
    - app-gateway
  http:
    # 1) “Canary” header forces v2 of app
    - match:
        - headers:
            user-group:
              exact: "canary"
      route:
        - destination:
            host: app
            subset: v2
    # 2) All other app-traffic: 90% v1, 10% v2
    - route:
        - destination:
            host: app
            subset: v1
          weight: 90
        - destination:
            host: app
            subset: v2
          weight: 10

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: model-service
spec:
  hosts:
    - "*"
  gateways:
    - app-gateway        
  http:
    - match:
        - headers:
            user-group:
              exact: "canary"
      route:
        - destination:
            host: model-service
            subset: v2
    # Weighted split for all other model-service calls
    - route:
        - destination:
            host: model-service
            subset: v1
          weight: 90 # this division of weigths can be changed to 50/50 later if we feel comfortable
        - destination:
            host: model-service
            subset: v2
          weight: 10
